Prevent the status indicator extension point from overlapping at certain screen widths

--- a/app/styles/_project-menu.less
+++ b/app/styles/_project-menu.less
@@ -154,7 +154,7 @@
     float: left;
     margin: 0;
     padding-top: 0;
-    max-width: 400px; // Default project menu width
+    max-width: 280px; // Leave enough space for the status indicator extension point
     .bootstrap-select.btn-group {
       .btn {
         padding: 15px 50px 15px 30px;
@@ -176,9 +176,17 @@
     }
     .bootstrap-select .dropdown-toggle {
       height: 60px;
-      max-width: 400px;
+      max-width: 280px;
       min-width: 280px;
     }
+  }
+}
+
+// At 900 there is enough space to make the menu bigger and still have space for the status indicator extension
+@media (min-width: 900px) {
+  .navbar-project-menu .bootstrap-select .dropdown-toggle,
+  .navbar-project-menu {
+    max-width: 400px;
   }
 }
 
